--- a/test_grid.ipynb
+++ b/test_grid.ipynb
@@ -4,23 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chips\n",
-      "20190727NDVI.tif loaded\n",
-      "\n",
-      "ndvi100.tif OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from raster_tools import openGeoRaster\n",
-    "s = openGeoRaster(r\"H:\\REMOTE_S\\S1_PROJETS_R2\\M_HOUEL_PP_SISTEMA\\CORRELATION_VG_SAR\\data\\IMAGES\\OPTICAL\\20190727\\20190727NDVI.tif\", \n",
-    "res=1000)\n",
-    "s.exportAsRasterFile(\"c:/users/eudes/desktop/ndvi100.tif\")"
+    "from raster_tools import GeoGrid, print_shapely_geom\n",
+    "A = GeoGrid(447326.0, 1420076.7, 100, -100, 30, 45, crs=\"epsg:32632\")\n",
+    "B = GeoGrid(448424.6, 1419352.8, 100, -100, 30, 45, crs=\"epsg:32632\")"
    ]
   },
   {
@@ -28,54 +16,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "row 0/41\n",
-      "row 1/41\n",
-      "row 2/41\n",
-      "row 3/41\n",
-      "row 4/41\n",
-      "row 5/41\n",
-      "row 6/41\n",
-      "row 7/41\n",
-      "row 8/41\n",
-      "row 9/41\n",
-      "row 10/41\n",
-      "row 11/41\n",
-      "row 12/41\n",
-      "row 13/41\n",
-      "row 14/41\n",
-      "row 15/41\n",
-      "row 16/41\n",
-      "row 17/41\n",
-      "row 18/41\n",
-      "row 19/41\n",
-      "row 20/41\n",
-      "row 21/41\n",
-      "row 22/41\n",
-      "row 23/41\n",
-      "row 24/41\n",
-      "row 25/41\n",
-      "row 26/41\n",
-      "row 27/41\n",
-      "row 28/41\n",
-      "row 29/41\n",
-      "row 30/41\n",
-      "row 31/41\n",
-      "row 32/41\n",
-      "row 33/41\n",
-      "row 34/41\n",
-      "row 35/41\n",
-      "row 36/41\n",
-      "row 37/41\n",
-      "row 38/41\n",
-      "row 39/41\n",
-      "row 40/41\n",
-      "row 41/41\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -86,8 +26,9 @@
     }
    ],
    "source": [
-    "t = s.geoData.compute_gdf_grid()\n",
-    "t.to_file(\"c:/users/eudes/desktop/machin.shp\")"
+    "import numpy as np\n",
+    "C = A.common_extent_with(B)\n",
+    "print_shapely_geom(C, \"c:/users/eudes/desktop/C.shp\", A.crs)"
    ]
   }
  ],
