Documentation ds functions

--- a/tests_telenvi_3.0.0.ipynb
+++ b/tests_telenvi_3.0.0.ipynb
@@ -561,7 +561,7 @@
     "print(s2a.getOriginPoint())\n",
     "\n",
     "# comparaison du système de projection\n",
-    "print(\"\\nSYSTEME DE COORDONNEES IDENTIQUES\")\n",
+    "print(\"\\nSYSTEMES DE COORDONNEES IDENTIQUES\")\n",
     "print(ls8_clipped_on_s2a.ds.GetProjection() == s2a.ds.GetProjection())\n",
     "\n",
     "# Sauvegarde pour aller observer dans qgis\n",
