Clip with a GeoIm

--- a/tests_telenvi_3.0.0.ipynb
+++ b/tests_telenvi_3.0.0.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,9 +81,7 @@
      "output_type": "stream",
      "text": [
       "LC08_L1TP_147031_20220411_20220419_02_T1_B2.TIF\n",
-      "numero polygone = 0\n",
-      "read as array\n",
-      "0.002670764923095703\n"
+      "numero polygone = 0\n"
      ]
     },
     {
@@ -102,9 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 1\n",
-      "read as array\n",
-      "0.0057218074798583984\n"
+      "numero polygone = 1\n"
      ]
     },
     {
@@ -123,9 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 2\n",
-      "read as array\n",
-      "0.0029256343841552734\n"
+      "numero polygone = 2\n"
      ]
     },
     {
@@ -144,9 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 3\n",
-      "read as array\n",
-      "0.007806062698364258\n"
+      "numero polygone = 3\n"
      ]
     },
     {
@@ -166,9 +158,7 @@
      "output_type": "stream",
      "text": [
       "T44TMM_20220603T052651_B02.jp2\n",
-      "numero polygone = 0\n",
-      "read as array\n",
-      "0.012697935104370117\n"
+      "numero polygone = 0\n"
      ]
     },
     {
@@ -187,9 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 1\n",
-      "read as array\n",
-      "0.01122736930847168\n"
+      "numero polygone = 1\n"
      ]
     },
     {
@@ -208,9 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 2\n",
-      "read as array\n",
-      "0.0028777122497558594\n"
+      "numero polygone = 2\n"
      ]
     },
     {
@@ -229,9 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numero polygone = 3\n",
-      "read as array\n",
-      "0.015997648239135742\n"
+      "numero polygone = 3\n"
      ]
     },
     {
@@ -263,17 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "crop...\n",
-      "read as array\n",
-      "0.027193784713745117\n",
-      "geoim LC08_L1TP_147031_20220411_20220419_02_T1_B2.TIF ready\n"
+      "crop\n",
+      "geoim from file LC08_L1TP_147031_20220411_20220419_02_T1_B2.TIF ready\n"
      ]
     },
     {
@@ -292,7 +281,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +292,28 @@
     "    rasterPath = b2_ls8_path,\n",
     "    crop = b2_s2a_path)\n",
     "crop_ls8_from_s2a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "osgeo.gdal.Dataset"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from osgeo import gdal\n",
+    "ds = gdal.Open(b2_ls8_path)\n",
+    "type(ds)"
    ]
   },
   {
@@ -365,6 +376,13 @@
     "\n",
     "crop_s2a_from_index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
